# HuntGames

./: README.md  build.gradle.kts  example.lua  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/yervant/huntgames/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/yervant/huntmem/: ExampleInstrumentedTest.kt
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/aidl/com/yervant/huntgames/: IHuntService.aidl
app/src/main/assets/: kpimg  kpimg-with-kp  kptools  kptools-android
app/src/main/cpp/: CMakeLists.txt  MapRegionHelper.h  MapRegionType.h  MemoryReaderWriter37.h  main.cpp
app/src/main/cpp/MemSearchKit/: MemSearchKitCompVal.h  MemSearchKitCore.h  MemSearchKitSafeWorkSecWrapper.h  MemSearchKitUmbrella.h
app/src/main/java/com/yervant/huntgames/backend/: Disassemble.kt  HGMem.kt  Hunt.kt  HuntService.kt  HuntingMemory.kt  LuaExecute.kt  Memory.kt  MemoryScanner.kt  Process.kt  rwMem.kt  rwProcMem.kt
app/src/main/java/com/yervant/huntgames/ui/: AddressOverlayDialog.kt  EditAddressOverlayDialog.kt  HuntOverlayServiceEntry.kt  HuntingScreen.kt  MainActivity.kt  utils.kt  (+3 more)
app/src/main/res/drawable/: ic_home.xml  ic_lua_exe.xml
app/src/main/res/layout/: activity_main.xml  item_process.xml  overlay_menu.xml  process.xml  tab1.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yervant/huntgames/: ExampleUnitTest.kt
app/src/test/java/com/yervant/huntmem/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+38 files in other folders)
